--- a/conference-ticket-gen/src/button/button.css
+++ b/conference-ticket-gen/src/button/button.css
@@ -5,6 +5,6 @@
     justify-content: center;
     border-radius: 1vw;
     cursor: pointer;
-    background-color: wheat;
+    background-color: none;
     border: none;
 }
