--- a/conference-ticket-gen/src/pages/ticket/ticket.css
+++ b/conference-ticket-gen/src/pages/ticket/ticket.css
@@ -50,13 +50,14 @@
 .ticketImage .ticketCard{
     border: 4px solid #0e464f;
     position: absolute;
-    top: 47vh;
-    right: 35.5vw;
+    top: 40.3vh;
+    right: 32.5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1vw;
+    margin: 3vw;
     /* margin: 0 auto; */
     border-radius: 10px;
     font-size: 70%;
@@ -131,13 +132,23 @@ margin-bottom: 0;
     color: #24a0b5;
   }
 
-  .ticketbton .colouredbtn{
+  .ticketbton .transparentbtn:hover{
     background: #24a0b5;
     border: none;
     color: white;
   }
 
-  @media (min-width: 300px) and (max-width: 1024px){
+  .ticketbton .transparentbtn:focus{
+    outline: 3px solid #24a0b5 ;
+  }
+
+  /* .ticketbton .colouredbtn{
+    background: #24a0b5;
+    border: none;
+    color: white;
+  } */
+
+  @media (min-width: 33px) and (max-width: 768px){
     .ticket .ticket-container{
       margin: 4vw 16vw;
       
