--- a/conference-ticket-gen/src/ticketType/ticketType.css
+++ b/conference-ticket-gen/src/ticketType/ticketType.css
@@ -1,9 +1,13 @@
 .ticketTypeContainer {
     border: 1px solid #24a0b5;
     border-radius: 10px;
-    margin: 0;
+    margin: auto;
+    max-width: 100%;
+    width: 100%;
+    display: flex;
     /* margin: 2vw;
     padding: 1vw; */
+    
 }
 
 .ticketTypeContainer:hover{
@@ -16,9 +20,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
-    padding: 1vw 3vw 1vw 1vw;
     
+    padding: 2vw;
 }
 
 
@@ -29,28 +32,11 @@
    
 }
 .ticketType h1{
-    font-size: 1.5rem;
+    font-size: 2vw;
     font-weight: 800;
     margin-bottom: 1vw;
 }
 .ticketType p{
-    font-size: 0.7rem;
+    font-size: 1vw;
     font-weight: 100;
-    
-}
-
-@media (min-width:300px) and (max-width: 800px){
-    .ticketTypeContainer{
-        padding: 2vw;
-    }
-    .ticketType h1{
-        font-size: 1rem;
-        font-weight: 800;
-        margin-bottom: 1vw;
-    }
-    .ticketType p{
-        font-size: 0.5rem;
-        font-weight: 100;
-        
-    }
 }
