--- a/conference-ticket-gen/src/pages/homePage/homePage.css
+++ b/conference-ticket-gen/src/pages/homePage/homePage.css
@@ -1,9 +1,13 @@
 
+.homepage{
+    padding: 2vh 0;
+}
 .homepage .container{
     border: 1px solid #0e464f;
     /* margin: 2vw 18vw; */
     margin: 2vh auto;
-    max-width: 65%;
+    max-width: 80%;
+    
     color: white;
     border-radius: 20px;
 }
@@ -17,6 +21,7 @@
     /* margin: 2vw 5vw; */
     max-width: 90%;
     margin: 2vh auto;
+    padding: 1vw;
     border-radius: 20px;
 }
 
@@ -33,7 +38,8 @@
     background: radial-gradient(ellipse at 10% 40%,#07373f 20%, #02191d 60%);
 }
 .homepage .container .inner-container .techember h1{
-    font-size: 3.5vw;
+    /* font-size: 3.5vw; */
+    font-size: clamp(24px, 5vw, 48px);
     font-weight: 300;
     margin-bottom: 0;
     font-family: 'Road Rage', cursive;
@@ -41,7 +47,8 @@
 }
 
 .homepage .container .inner-container .techember p{
-    font-size: 1.5vw;
+    /* font-size: 1.5vw; */
+    font-size: clamp(14px, 2vw, 18px);
     margin-top: 0;
     margin-bottom: 0.8vw;
     font-family: 'Roboto';
@@ -57,6 +64,7 @@
 .homepage .container .inner-container .tickettype{
     display: flex;
     flex-direction: column;
+    margin: 0 1vw;
 
 }
 .homepage .container .inner-container .tickettype .select{
@@ -71,7 +79,7 @@
     width: 90%;
     justify-content: space-between;
     gap: 2vw;
-    padding: 2vw;
+    padding: 4vw 2vw;
     border: 1px solid #07373f;
     margin: 2vw auto;
     border-radius: 10px;
@@ -98,7 +106,7 @@
 }
 
 .homepage .container .inner-container .ticketcount form label{
-    font-size: 2vw;
+    font-size: clamp(14px, 2vw, 18px);
 }
 
 .homepage .container .inner-container .ticketcount form select{
@@ -125,11 +133,15 @@
     align-items: center;
     justify-content: center;
     gap: 6vw;
+    margin: 3vw;
 }
 
 .homepage .container .inner-container .ticketcount .homebtn .cancelbtn,
 .homepage .container .inner-container .ticketcount .homebtn .nextbtn{
-    padding: 1em 8em;
+    /* padding: 2vw 30vw; */
+    max-width: 100%;
+    width: 100%;
+    padding: 2vw 0;
     margin:  0;
     /* margin: 1vw 2vw; */
 }
@@ -150,6 +162,7 @@
     border: 1px solid #24a0b5 ;
     outline: none;
     color: #24a0b5;
+    
 }
 /* .homepage .container .inner-container .ticketcount .homebtn .nextbtn{
     background: transparent;
@@ -163,16 +176,25 @@
     .homepage .container .inner-container .tickettype .ticketContainer{
         display: flex;
         flex-direction: column;
-        /* gap: 3vw; */
+        gap: 3vw;
         
     }
-}
 
-@media (max-width: 1024px) {
     .homepage .container .inner-container .ticketcount .homebtn{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         gap: 2vw;
     }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .homepage .container .inner-container .ticketcount .homebtn{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 2vw;
+    }
+
+
 }
