--- a/conference-ticket-gen/src/pages/ticket/ticket.css
+++ b/conference-ticket-gen/src/pages/ticket/ticket.css
@@ -32,10 +32,13 @@
   font-size: 1vw;
 } */
 .ticket .ticket-container .ticket-inner-container .ticketHeading h1{
-  font-size: 2.5vw;
+  font-size: clamp(12px, 2vw, 24px);
+  margin-top: 3vh;
+  margin-bottom: 0;
 }
 .ticket .ticket-container .ticket-inner-container .ticketHeading p{
-  font-size: 1.5vw;
+  font-size: clamp(9px, 2vw, 24px);
+  margin-top: 1vh;
 }
 
 .ticketImage {
@@ -51,6 +54,7 @@
 
 .ticketImage .ticket-image{
   max-width: 100%;
+  width: 100%;
   height: 100vh;
   
 }
@@ -60,7 +64,8 @@
   position: absolute;
   top: 5%;
   border-radius: 10px;
-  max-width: 87%;
+  max-width: 85%;
+  width: 100%;
   height: 70%;
 
   display: flex;
@@ -71,14 +76,19 @@
   padding: 2%;
 }
 
-
+/* .ticketImage .ticketCard .ticket-text{
+  border: 2px solid red;
+  width: 100%;
+} */
 
 .ticketImage .ticketCard .ticket-text h1{
-  font-size: 100%;
+  font-size: clamp(18px, 4vw, 22px);
+  
 }
 
 .ticketImage .ticketCard p {
-  font-size: 70%;
+  font-size: clamp(12px, 0.424vw, 20px);
+  margin-bottom: 0;
 }
 .ticketImage .ticketCard .ticket-img img{
     max-width: 70%;
@@ -94,10 +104,15 @@
     border-collapse: collapse;
     border: 1px solid #0e464f;
     max-width: 100%;
+    width: 100%;
     border-radius: 10px;
 
     background: #08343c;
-    font-size: 70%;
+    /* font-size: 70%; */
+    font-size: clamp(8px, 2vw, 10px);
+    text-align: center;
+    
+    
   }
 
   td:nth-of-type(1){
@@ -106,26 +121,33 @@
   }
 
   thead td{
-    padding: 5%;
+    padding: 2vh 0;
   }
 
   tbody td{
     border-bottom: 1px solid #0e464f;
-    padding: 0 2em;
+    width: 20%;
   }
 
   .ticket-table .special-request p{
-    font-size: 70%;
+    font-size: clamp(8px, 2vw, 10px);
   }
 
 .ticketImage .bar-code{
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   bottom: 3%;
 }
 .ticketImage .bar-code img{
     /* width: 25vw */
     max-width: 100%;
-    height: auto;
+    /* width: 300px; */
+
+    width: clamp(200px, 50vw, 270px);
+    height: 10vh;
 }
 
 
