--- a/conference-ticket-gen/src/ticketType/ticketType.css
+++ b/conference-ticket-gen/src/ticketType/ticketType.css
@@ -21,7 +21,7 @@
     flex-direction: column;
     align-items: flex-start;
     
-    padding: 2vw;
+    padding: 2vw; 
 }
 
 
@@ -29,14 +29,18 @@
 .ticketType p {
     margin-bottom: 0.5vw;
     margin-top: 0;
-   
+    /* margin-left: 2vw; */
+    
 }
 .ticketType h1{
-    font-size: 2vw;
+    /* font-size: 2vw; */
     font-weight: 800;
     margin-bottom: 1vw;
+    font-size: clamp(14px, 2vw, 18px);
 }
 .ticketType p{
-    font-size: 1vw;
+    /* font-size: 1vw; */
     font-weight: 100;
+    /* border: 2px solid red; */
+    font-size: clamp(8px, 1vw, 16px);
 }
